--- a/learnmore.html
+++ b/learnmore.html
@@ -4,127 +4,132 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FlowTech</title>
+    <title>HFlow</title>
 </head>
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,900;1,900&display=swap"
+    rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+    href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
+    rel="stylesheet">
+
+<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 <link rel="stylesheet" href="style.css">
 
 <body>
-    <div id="home" class="nav_bar">
-        <header class="header-learnmore">
-            <a class="logo" href="index.html"><img class="logo" src="img/logo.png" alt=""></a>
-            <nav>
-                <ul class="nav_links">
-                    <li><a href="index.html#home">Home</a></li>
-                    <li><a href="index.html#about">About</a></li>
-                    <li><a href="index.html#service">Service</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
+    <header class="header" id="home">
+        <a href="" style="font-size: 30px;">HFlow</a>
 
-        </header>
+        <input type="checkbox" id="check">
+        <label for="check" class="icons">
+            <i class='bx bx-menu' id="menu-icon"></i>
+            <i class='bx bx-x' id="close-icon"></i>
+        </label>
 
-    </div>
+        <nav class="navbar">
+            <a href="#home" style="--i:0;">Home</a>
+            <a href="#about" style="--i:1;">About</a>
+            <a href="#service" style="--i:2;">Service</a>
+            <a href="#contact" style="--i:3;">Contact</a>
+        </nav>
+    </header>
 
-    <div class="service_learnmore">
-        <div class="title-learnmore">
+    <div class="service-page2" id="service">
+        <div class="service_title">
             <h1>Our Service</h1>
         </div>
+
+        <div class="box" id="about">
+            <div class="text">
+                <h1>Meet the founder</h1>
+                <br>
+                <p>Hi there! I am Himanshu Seervi, the founder of HFlow. A little bit about me: I'm a university student
+                    studying software engineering at Guelph University. I love to play and watch sports, especially
+                    soccer; Big Fc Barcelona fan, right here.
+                </p>
+                <br>
+                <p>Anyways, I got the idea to start HFlow when I was running my own marketing agency in high school and
+                    didn't have time to work on growing my business. I didn't have the budget to hire someone to do some
+                    of the tasks for me. So, I started to automate small tasks like sending cold emails and even an IG
+                    DM bot that would reply to any messages I received.</p>
+
+            </div>
+
+            <div class="about_image">
+                <img src="img/11.png" draggable="false" alt="">
+            </div>
+
+        </div>
+
+        <div class="box">
+            <div class="text">
+                <h1>Meet the founder</h1>
+                <br>
+                <p>Hi there! I am Himanshu Seervi, the founder of HFlow. A little bit about me: I'm a university student
+                    studying software engineering at Guelph University. I love to play and watch sports, especially
+                    soccer; Big Fc Barcelona fan, right here.
+                </p>
+                <br>
+                <p>Anyways, I got the idea to start HFlow when I was running my own marketing agency in high school and
+                    didn't have time to work on growing my business. I didn't have the budget to hire someone to do some
+                    of the tasks for me. So, I started to automate small tasks like sending cold emails and even an IG
+                    DM bot that would reply to any messages I received.</p>
+            </div>
+
+            <div class="about_image">
+                <img src="img/11.png" draggable="false" alt="">
+            </div>
+
+        </div>
+
+        <div class="box">
+            <div class="text">
+                <h1>Meet the founder</h1>
+                <br>
+                <p>Hi there! I am Himanshu Seervi, the founder of HFlow. A little bit about me: I'm a university student
+                    studying software engineering at Guelph University. I love to play and watch sports, especially
+                    soccer; Big Fc Barcelona fan, right here.
+                </p>
+                <br>
+                <p>Anyways, I got the idea to start HFlow when I was running my own marketing agency in high school and
+                    didn't have time to work on growing my business. I didn't have the budget to hire someone to do some
+                    of the tasks for me. So, I started to automate small tasks like sending cold emails and even an IG
+                    DM bot that would reply to any messages I received.</p>
+            </div>
+
+            <div class="about_image">
+                <img src="img/11.png" draggable="false" alt="">
+            </div>
+
+        </div>
     </div>
 
-    <div class="box-learnmore">
 
-        <div class="learnmore_image">
-            <img src="img/aichatbot.png" alt="">
-        </div>
-
-        <div class="text">
-            <h1>Custom Chatbots</h1>
-            <br>
-            <p>The Custom AI Chatbot is an innovative automated system that is specifically designed to analyze and
-                understand the unique requirements of your business. It is equipped to effectively manage customer
-                service interactions, provide support for employee training, and handle a wide range of tasks such as
-                answering inquiries and turning website vistiors to booked appointment.
-            </p>
-            <br>
-            <p>AI Chatbot has the ability to operate without any limits, making it a valuable tool for simplifying
-                tasks. It doesn't require constant supervision, and its 24/7 availability ensures that your business can
-                continue running smoothly even when you're not actively overseeing it.
-            </p>
-        </div>
-
+    <div class="book_call" id="contact">
+        <h1>Book a free 30-min call, Coffee's on me!</h1>
     </div>
 
-    <div class="box-learnmore">
-
-        <div class="learnmore_image">
-            <img src="img/customautomation.png" alt="">
+    <div id="contact" class="calendly">
+        <!-- Calendly inline widget begin -->
+        <div class="calendly-inline-widget" data-url="https://calendly.com/himseervi/discovery-call?hide_gdpr_banner=1">
         </div>
-
-        <div class="text">
-            <h1>Custom Automations</h1>
-            <br>
-            <p>Custom Automation is a tailored workflow system designed to meet your business's unique requirements. We
-                develop and implement solutions that not only resolve your existing challenges, but also allow the
-                expansion of your business. These customized workflows will seamlessly integrate into your business
-                processes, ultimately enhancing productivity by streamlining tasks and processes.
-            </p>
-            <br>
-            <p>When we talk about automation, one of the key processes we focus on is the onboarding of new clients.
-                When a new client signs with us, there are numerous tasks that need to be completed, such as setting up
-                invoicing, adding them to our communication platforms like Slack. Implementing an automated workflow for
-                these tasks can significantly reduce the time it takes to complete them. Not only does this make a
-                positive impression on our clients but it also helps to establish a stronger and more efficient
-                relationship with them.
-            </p>
-        </div>
-
-    </div>
-
-    <div class="box-learnmore">
-
-        <div class="learnmore_image">
-            <img src="img/businesscon.png" alt="">
-        </div>
-
-        <div class="text">
-            <h1>Business Consultation</h1>
-            <br>
-            <p>Business Consultation is where we come in and analysis your business processes to identify areas for
-                improvement and optimization. Our goal is to streamline operations and enhance productivity by
-                harnessing the power of automated workflows.
-
-            </p>
-            <br>
-            <p>During our consultation process, we will assess your current workflows, identify bottlenecks, and
-                recommend automation solutions customized to your specific business needs. Whether it's automating
-                repetitive tasks, implementing workflow management systems, or integrating advanced software solutions,
-                we'll work closely with you to develop a strategy that aligns with your objectives.
-            </p>
-        </div>
-
-    </div>
-
-    <div class="book-call-learnmore">
-        <div class="book-call-title">
-            <h1>Book a free 30-min call, Coffee's on me!</h1>
-        </div>
-
-        <div id="contact" class="calendly">
-            <!-- Calendly inline widget begin -->
-            <div class="calendly-inline-widget"
-                data-url="https://calendly.com/himseervi/discovery-call?hide_gdpr_banner=1"></div>
-            <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
-            <!-- Calendly inline widget end -->
-        </div>
+        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+        <!-- Calendly inline widget end -->
     </div>
 
     <footer>
         <div class="container_footer">
             <div class="footer-content">
                 <h3>Contact Us</h3>
-                <p>Email<br>himseervi@gmail.com</p>
-                <p>Phone<br>705-975-3686 <br><i>(Canada Only)</i></p>
-                <p>Address<br>Sault Ste Marie, Ontario</p>
+                <p>Email<br>himanshu@hflow.ca</p>
+                <p>Phone<br>+1 705-975-3686 <br></p>
+                <p>Address<br>Sault Ste. Marie, Ontario</p>
             </div>
             <div class="footer-content">
                 <h3>Quick Links</h3>
@@ -137,7 +142,7 @@
             </div>
         </div>
         <div class="bottom-bar">
-            <p>&copy; 2024 FlowTech. All rights reserved</p>
+            <p>&copy; 2024 HFlow. All rights reserved</p>
         </div>
     </footer>
 
