--- a/learnmore.html
+++ b/learnmore.html
@@ -7,6 +7,7 @@
     <title>HFlow</title>
 </head>
 
+<link rel="icon" type="img/iconlogo.png" href="img/iconlogo.png">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
@@ -24,7 +25,7 @@
 
 <body>
     <header class="header" id="home">
-        <a href="" style="font-size: 30px;">HFlow</a>
+        <a href="index.html" style="font-size: 30px;">HFlow</a>
 
         <input type="checkbox" id="check">
         <label for="check" class="icons">
@@ -33,7 +34,7 @@
         </label>
 
         <nav class="navbar">
-            <a href="#home" style="--i:0;">Home</a>
+            <a href="index.html" style="--i:0;">Home</a>
             <a href="#about" style="--i:1;">About</a>
             <a href="#service" style="--i:2;">Service</a>
             <a href="#contact" style="--i:3;">Contact</a>
@@ -47,64 +48,68 @@
 
         <div class="box" id="about">
             <div class="text">
-                <h1>Meet the founder</h1>
+                <h1>Custom Chatbots</h1>
                 <br>
-                <p>Hi there! I am Himanshu Seervi, the founder of HFlow. A little bit about me: I'm a university student
-                    studying software engineering at Guelph University. I love to play and watch sports, especially
-                    soccer; Big Fc Barcelona fan, right here.
+                <p>The Custom AI Chatbot is an innovative automated system that is specifically designed to analyze and
+                    understand the unique requirements of your business. It is equipped to effectively manage customer
+                    service interactions, provide support for employee training, and handle a wide range of tasks such
+                    as
+                    answering inquiries and turning website vistiors to booked
                 </p>
                 <br>
-                <p>Anyways, I got the idea to start HFlow when I was running my own marketing agency in high school and
-                    didn't have time to work on growing my business. I didn't have the budget to hire someone to do some
-                    of the tasks for me. So, I started to automate small tasks like sending cold emails and even an IG
-                    DM bot that would reply to any messages I received.</p>
+                <p>AI Chatbot has the ability to operate without any limits, making it a valuable tool for simplifying
+                    tasks. It doesn't require constant supervision, and its 24/7 availability ensures that your business
+                    can continue running smoothly even when you're not actively overseeing it.
+                </p>
 
             </div>
 
             <div class="about_image">
-                <img src="img/11.png" draggable="false" alt="">
+                <img src="img/aichatbot.png" draggable="false" alt="">
             </div>
 
         </div>
 
         <div class="box">
             <div class="text">
-                <h1>Meet the founder</h1>
+                <h1>Custom Automations</h1>
                 <br>
-                <p>Hi there! I am Himanshu Seervi, the founder of HFlow. A little bit about me: I'm a university student
-                    studying software engineering at Guelph University. I love to play and watch sports, especially
-                    soccer; Big Fc Barcelona fan, right here.
+                <p>Custom Automation is a tailored workflow system designed to meet your business's unique needs,
+                    resolving challenges and enabling growth. Our solutions integrate seamlessly into your processes,
+                    enhancing productivity by streamlining tasks.</p>
+                <br>
+                <p>One key focus is automating client onboarding. Tasks such as setting up invoicing and adding clients
+                    to communication platforms like Slack can be automated, significantly reducing completion time. This
+                    not only impresses clients but also establishes a stronger, more efficient relationship.
                 </p>
-                <br>
-                <p>Anyways, I got the idea to start HFlow when I was running my own marketing agency in high school and
-                    didn't have time to work on growing my business. I didn't have the budget to hire someone to do some
-                    of the tasks for me. So, I started to automate small tasks like sending cold emails and even an IG
-                    DM bot that would reply to any messages I received.</p>
             </div>
 
             <div class="about_image">
-                <img src="img/11.png" draggable="false" alt="">
+                <img src="img/automation.png" draggable="false" alt="">
             </div>
 
         </div>
 
         <div class="box">
             <div class="text">
-                <h1>Meet the founder</h1>
+                <h1>Business Consultation</h1>
                 <br>
-                <p>Hi there! I am Himanshu Seervi, the founder of HFlow. A little bit about me: I'm a university student
-                    studying software engineering at Guelph University. I love to play and watch sports, especially
-                    soccer; Big Fc Barcelona fan, right here.
+                <p>Business Consultation is where we come in and analysis your business processes to identify areas for
+                    improvement and optimization. Our goal is to streamline operations and enhance productivity by
+                    harnessing the power of automated workflows.
+
                 </p>
                 <br>
-                <p>Anyways, I got the idea to start HFlow when I was running my own marketing agency in high school and
-                    didn't have time to work on growing my business. I didn't have the budget to hire someone to do some
-                    of the tasks for me. So, I started to automate small tasks like sending cold emails and even an IG
-                    DM bot that would reply to any messages I received.</p>
+                <p>During our consultation process, we will assess your current workflows, identify bottlenecks, and
+                    recommend automation solutions customized to your specific business needs. Whether it's automating
+                    repetitive tasks, implementing workflow management systems, or integrating advanced software
+                    solutions,
+                    we'll work closely with you to develop a strategy that aligns with your objectives.
+                </p>
             </div>
 
             <div class="about_image">
-                <img src="img/11.png" draggable="false" alt="">
+                <img src="img/consult.png" draggable="false" alt="">
             </div>
 
         </div>
@@ -134,7 +139,7 @@
             <div class="footer-content">
                 <h3>Quick Links</h3>
                 <ul class="list">
-                    <li><a href="">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#service">Service</a></li>
                     <li><a href="#contact">Contact</a></li>
