--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>HFlow</title>
 </head>
 
+<link rel="icon" type="img/iconlogo.png" href="img/iconlogo.png">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
@@ -51,7 +52,7 @@
 
 
         <div class="video">
-            <iframe src="https://www.youtube.com/embed/erqRw3E-vn4?si=DB7Ppp40UnepgJ0p" title="YouTube video player"
+            <iframe src="img/Coming Soon.png" title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -63,18 +64,17 @@
 
     <div class="about">
         <div class="image">
-            <img src="img/11.png" draggable="false" alt="">
+            <img src="img/serviceimg.png" draggable="false" alt="">
         </div>
 
         <div class="box" id="about">
             <div class="text">
                 <h1>Who we are</h1>
                 <br>
-                <p>At HFlow, we work closely with your business to analyze your specific needs and challenges. We
-                    then provide tailored software solutions and seamless automation processes that are designed to
-                    optimize efficiency and minimize the need for manual intervention. Our goal is to empower your
-                    business to operate smoothly and effortlessly, allowing you to focus on strategic initiatives rather
-                    than routine tasks.
+                <p>At HFlow, we work closely with your business to analyze your specific needs and challenges. We then
+                    provide tailored software solutions and automation systems that are designed to optimize efficiency
+                    and minimize the need for manual intervention. Our goal is to empower your business to operate
+                    smoothly and effortlessly.
                 </p>
                 <br>
                 <p>If you’re a business like us, you understand just how important time and money is. Running a business
@@ -85,7 +85,7 @@
             </div>
 
             <div class="about_image">
-                <img src="img/11.png" draggable="false" alt="">
+                <img src="img/iconlogo.png" draggable="false" alt="">
             </div>
 
         </div>
@@ -94,19 +94,20 @@
             <div class="text">
                 <h1>Meet the founder</h1>
                 <br>
-                <p>Hi there! I am Himanshu Seervi, the founder of HFlow. A little bit about me: I'm a university student
-                    studying software engineering at Guelph University. I love to play and watch sports, especially
-                    soccer; Big Fc Barcelona fan, right here.
+                <p>Hi there! My name is Himanshu Seervi, and I am the founder of HFlow. A little bit about me - I'm a
+                    university student studying software engineering at the University of Guelph. I enjoy playing and
+                    watching sports, particularly soccer; I'm a big FC Barcelona fan.
                 </p>
                 <br>
-                <p>Anyways, I got the idea to start HFlow when I was running my own marketing agency in high school and
-                    didn't have time to work on growing my business. I didn't have the budget to hire someone to do some
-                    of the tasks for me. So, I started to automate small tasks like sending cold emails and even an IG
-                    DM bot that would reply to any messages I received.</p>
+                <p>The idea to start HFlow came to me when I was running my own marketing agency in high school. I
+                    didn't have time to work on growing my business, and I didn't have the budget to hire someone to
+                    help with tasks. So, I began automating small tasks such as sending cold emails and creating an
+                    Instagram dm bot that could reply to anyone.
+                </p>
             </div>
 
             <div class="about_image">
-                <img src="img/11.png" draggable="false" alt="">
+                <img src="img/Himanshu.png" draggable="false" alt="">
             </div>
 
         </div>
@@ -119,15 +120,15 @@
         <div id="service" class="container_service">
             <div class="container">
                 <h1>Custom Chatbots</h1>
-                <img src="img/11.png" draggable="false" alt="">
+                <img src="img/aichatbot.png" draggable="false" alt="">
             </div>
             <div class="container">
                 <h1>Custom Automations</h1>
-                <img src="img/11.png" draggable="false" alt="">
+                <img src="img/automation.png" draggable="false" alt="">
             </div>
             <div class="container">
                 <h1>Business Consultation</h1>
-                <img src="img/11.png" draggable="false" alt="">
+                <img src="img/consult.png" draggable="false" alt="">
             </div>
         </div>
 
@@ -144,29 +145,29 @@
             <div class="box_1">
                 <div class="container">
                     <h1>1. Discovery Call</h1>
-                    <img src="img/11.png" draggable="false" alt="">
+                    <img src="img/1.png" draggable="false" alt="">
                 </div>
                 <div class="container">
                     <h1>2. Choose Your Service</h1>
-                    <img src="img/11.png" draggable="false" alt="">
+                    <img src="img/2.png" draggable="false" alt="">
                 </div>
                 <div class="container">
                     <h1>3. Business Research</h1>
-                    <img src="img/11.png" draggable="false" alt="">
+                    <img src="img/3.png" draggable="false" alt="">
                 </div>
             </div>
             <div class="box_2">
                 <div class="container">
                     <h1>4. Prototype</h1>
-                    <img src="img/11.png" draggable="false" alt="">
+                    <img src="img/4.png" draggable="false" alt="">
                 </div>
                 <div class="container">
                     <h1>5. Development</h1>
-                    <img src="img/11.png" draggable="false" alt="">
+                    <img src="img/5.png" draggable="false" alt="">
                 </div>
                 <div class="container">
                     <h1>6. Maintenance</h1>
-                    <img src="img/11.png" draggable="false" alt="">
+                    <img src="img/6.png" draggable="false" alt="">
                 </div>
             </div>
         </div>
