--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
 
 
         <div class="video">
-            <iframe src="img/Coming Soon.png" title="YouTube video player"
-                frameborder="0"
+            <iframe src="https://www.youtube.com/embed/uO6PmgdnKh8?si=GkOItyzid6icllad" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+            </iframe>
+
             <div class="learnmore-button">
                 <a class="learn-but" href=""><button>Learn More &rarr;</button></a>
             </div>
